test/function/extra_arguments.lox
fn f(a, b) {
  print a
  print b
}

f(1, 2, 3, 4) // error: expected 2 arguments but got 4